--- a/Música.html
+++ b/Música.html
@@ -3,30 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reprodutor de Música</title>
+    <title>Reprodutor de Música - YouTube</title>
 </head>
 <body>
-    <!-- Reprodutor de música -->
-    <audio id="audio-player" autoplay>
-        <source id="audio-source" src="https://www.youtube.com/watch?v=s7RRgF5Ve_E" type="audio/mpeg">
-        Seu navegador não suporta o elemento de áudio.
-    </audio>
+    <!-- Iframe para tocar o áudio do YouTube -->
+    <div id="audio-player-container">
+        <!-- O primeiro link de áudio do YouTube -->
+        <iframe id="audio-player" width="0" height="0" src="https://www.youtube.com/embed/s7RRgF5Ve_E?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
 
-    <!-- Botão para tocar a música ao clicar -->
-    <button onclick="playMusic()">Clique para Tocar Música</button>
+    <!-- Texto ou qualquer outra coisa para indicar a interação -->
+    <p>Clique em qualquer lugar da página para mudar a música!</p>
 
     <script>
-        // Função para tocar música ao clicar
+        // Função para trocar o vídeo de áudio ao clicar
         function playMusic() {
-            const audioPlayer = document.getElementById('audio-player');
-            audioPlayer.play();
+            const iframe = document.getElementById('audio-player');
+            const audioLinks = [
+                "https://www.youtube.com/embed/s7RRgF5Ve_E?autoplay=1",  // Primeiro link de áudio
+                "https://www.youtube.com/embed/v9l52KilyLU?autoplay=1",  // Segundo link de áudio
+                "https://www.youtube.com/embed/8FuRsZ7U4BU?autoplay=1",  // Terceiro link de áudio
+                "https://www.youtube.com/embed/YHO6EDIbGlk?autoplay=1",  // Quarto link de áudio
+                "https://www.youtube.com/embed/Z38LV9INDtY?autoplay=1"   // Quinto link de áudio
+            ];
+
+            // Escolher um link aleatório
+            const randomIndex = Math.floor(Math.random() * audioLinks.length);
+            iframe.src = audioLinks[randomIndex];  // Mudar o iframe para um link aleatório
         }
 
-        // Função para tocar música ao carregar a página
+        // Função para tocar música automaticamente quando a página for carregada
         window.onload = function() {
-            const audioPlayer = document.getElementById('audio-player');
-            audioPlayer.play(); // Inicia automaticamente a música ao carregar a página
+            playMusic();  // Chama a função para tocar a música ao carregar a página
         };
+
+        // Adiciona um evento para tocar a música ao clicar em qualquer lugar da página
+        document.body.addEventListener('click', playMusic);
     </script>
 </body>
 </html>
